--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="textOrange">#E76F51</color>
+    <color name="bgColor">#E9C46A</color>
+    <color name="ageBgColor">#2A9D8F</color>
+    <color name="smallText">#264653</color>
+    <color name="dateTimeText">#F4A261</color>
 </resources>
